# python-patch

./: .travis.yml  CREDITS  LICENSE  README.md  patch.py  pyproject.toml
doc/: ADOPTIONS.md  CHANGES.md  HISTORY  LICENSE  RELEASING
patcher/: __init__.py  __main__.py
patcher/utils/: __init__.py  dataobjects.py  logger.py  patch.py  pathutil.py  variables.py
tests/: run_tests.py
